feat: first commit

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			-ms-animation: 1 noBlur 5s;
 		}
 		.uni {
+      border-radius: 100%;
 			background-image: url('bull.webp');
 			background-size: cover;
 			background-repeat: no-repeat;
